[gd_scene load_steps=5 format=3 uid="uid://d2rtprrmgnbft"]

[ext_resource type="Script" uid="uid://sokj8co3vuah" path="res://HUDs/Components/HeaderSkillCard.gd" id="1_31vgr"]
[ext_resource type="Texture2D" uid="uid://em1agvjl7ifw" path="res://pixil-frame-0.png" id="2_kb7vp"]
[ext_resource type="Texture2D" uid="uid://lh1ydjrxwlrk" path="res://Resources/icons/bolt.png" id="3_auo2c"]
[ext_resource type="Theme" uid="uid://bngt8jkm3fvb1" path="res://Resources/hud_elements/default.theme" id="4_dy3yq"]


[node name="HeaderSkillCard" type="MarginContainer"]
offset_right = 126.0
offset_bottom = 126.0
mouse_filter = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_31vgr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BorderOutside" type="ColorRect" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="BGColor" type="ColorRect" parent="MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0.27451, 0.27451, 0.27451, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="BorderInside" type="ColorRect" parent="MarginContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="BGColor" type="ColorRect" parent="MarginContainer/MarginContainer/MarginContainer/MarginContainer2"]
light_mask = 3
layout_mode = 2
color = Color(0.27451, 0.27451, 0.27451, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_kb7vp")
expand_mode = 5
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10
texture = ExtResource("2_kb7vp")
stretch_mode = 4
flip_v = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_kb7vp")
stretch_mode = 4
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
texture = ExtResource("2_kb7vp")
stretch_mode = 4
flip_h = true
flip_v = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="SpellIcon" type="TextureRect" parent="MarginContainer/MarginContainer/MarginContainer/MarginContainer/MarginContainer2"]
light_mask = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_auo2c")
stretch_mode = 4

[node name="OwnedLabelContainer" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/OwnedLabelContainer"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
color = Color(0, 0, 0, 0.784314)

[node name="Label" type="Label" parent="MarginContainer/OwnedLabelContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 19)
theme = ExtResource("4_dy3yq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
